--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: CE3201
-tagline: A Jekyll template for course websites
-description: A modern, highly customizable, responsive Jekyll template for course websites
+tagline: Civil Engineering Analytics and Data Visualization
+description: This course aims to introduce CEE students to the basic concepts and approaches to carry out basic data exploration from civil engineering sensors. Students will learn to model and make sense of data through various methods including exploratory data analysis.
 author: Xiaogang He
 baseurl: 'NUS-CE3201/' # the subpath of your site, e.g. /blog
 url: 'https://xiaoganghe.github.io' # the base hostname & protocol for your site, e.g. http://example.com
