--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: CE3201
 tagline: Civil Engineering Analytics and Data Visualization 📊
 description: Fall 2021 at National University of Singapore (NUS) 
 author: Xiaogang He
-baseurl: 'NUS-CE3201' # the subpath of your site, e.g. /blog
+baseurl: '/NUS-CE3201' # the subpath of your site, e.g. /blog
 url: 'https://xiaoganghe.github.io' # the base hostname & protocol for your site, e.g. http://example.com
 exclude: ["Gemfile", "Gemfile.lock", "LICENSE", "README.md"]
 
