--- a/_config.yml
+++ b/_config.yml
@@ -30,11 +30,14 @@ permalink: pretty
 aux_links:
   Xiaogang He:
     - 'http://hydro.iis.u-tokyo.ac.jp/~hexg/cv.html'
-  E-Book:
-    - 'http://hydro.iis.u-tokyo.ac.jp/~hexg/cv.html'
+  pyCIVIL E-Book:
+    - 'https://xiaoganghe.github.io/python-climate-visuals'
   LumiNUS:
     - 'https://luminus.nus.edu.sg/'
 footer_content: 'Xiaogang HE &copy; 2021 <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a>'
+
+last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
+last_edit_time_format: "%b %e %Y at %I:%M %p" # uses ruby's time format: https://ruby-doc.org/stdlib-2.7.0/libdoc/time/rdoc/Time.html
 
 # Collections for website data
 collections:
