--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,4 @@
-*.gem
-.bundle/
-.jekyll-cache/
-.jekyll-metadata
-.sass-cache/
-Gemfile.lock
-_site/
-node_modules/
-vendor/
+# macOS Files
+.DS_Store
+*.log
+*~
