--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: CE3201
 tagline: Civil Engineering Analytics and Data Visualization 📊
-description: National University of Singapore (NUS), Fall 2022
+description: National University of Singapore (NUS), Fall 2023
 author: Xiaogang He
 baseurl: '/NUS-CE3201' # the subpath of your site, e.g. /blog
 url: 'https://xiaoganghe.github.io' # the base hostname & protocol for your site, e.g. http://example.com
@@ -32,8 +32,8 @@ aux_links:
     - 'http://hydro.iis.u-tokyo.ac.jp/~hexg/cv.html'
   pyCIVIL E-Book:
     - 'https://xiaoganghe.github.io/python-climate-visuals'
-  LumiNUS:
-    - 'https://luminus.nus.edu.sg/'
+  Canvas:
+    - 'https://canvas.nus.edu.sg/'
 footer_content: 'Xiaogang HE &copy; 2021 <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a>'
 
 last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
